fixed white space around footer on home page

--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ body {
   overflow-x: hidden;
 }
 
+
 jumbo-img {
   display: block;
   width:100%;
@@ -131,11 +132,11 @@ img {
 /* --- Footer --- */
 
 footer {
-  padding: 30px 0;
+  padding-top: 30px;
   background: #003262;
-  border-top: 1px #EAEAEA solid;
-  margin-top: 50px;
+  margin-top: 0px;
   font-size: 14px;
+  padding-bottom: 10px;
 }
 
 footer a {
@@ -143,7 +144,7 @@ footer a {
 }
 
 footer .list-inline {
-  margin: 0;
+  margin: 10px;
   padding: 0;
 }
 footer .copyright {
